# TTCKnSP

./: CMakeLists.txt  README.md  RegionDecomposition.cpp  TTCknSP.h  graph.cpp  graph.h  heap.h  linearPiecewiseFunction.cpp  linearPiecewiseFunction.h  main.cpp  tools.cpp  tools.h
